Responsive Hero is complete, first version ready Tablet, Mobile and Desktop

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -46,9 +46,11 @@ $display-heading:(
     'd-1': 5rem,
     'd-2': 4.5rem,
     'd-3': 4rem,
-    'd-4': 3.5rem, /// 56px
+    'd-4': 3.5rem,      /// 56px
     'd-5': 3rem,
-    'd-6': 2.625em
+    'd-6': 2.625em,
+    'd-7': 2.76875em,    /// 44.3ox
+    'd-8': 2.13125em    /// 34.1px
 );
 $headings:(
     'h-1': 2.5rem,
@@ -167,15 +169,15 @@ $max-content-width: (
 $spacing-distance-relative:(
     's-0-15': 0.5em,
     's-0-56': 0.5625em,
-    's-0-62': 0.625em,
+    's-0-62': 0.625em,  /// 10px 
     's-1-1': 1em,
-    's-1-25': 1.25em,
+    's-1-25': 1.25em,   /// 20px
     's-1-50': 1.5em,
-    's-1-87': 1.875em,
-    's-3-00': 3rem,    /// 48px
-    's-2-50': 2.5em,   /// 40px
-    's-3-31': 3.125em, /// 50px
-    's-5-62': 5.625em, /// 90px
+    's-1-87': 1.875em,  /// 30px
+    's-3-00': 3rem,     /// 48px
+    's-2-50': 2.5em,    /// 40px
+    's-3-31': 3.125em,  /// 50px
+    's-5-62': 5.625em,  /// 90px
     's-8-12': 8.125em,
     's-9-37': 9.375em   
 );
@@ -191,10 +193,13 @@ $spacing-distance-relative:(
 $spacing-distance-base:(
     'sb-0-18': 0.1875rem,
     'sb-1-50': 1.5rem,
-    'sb-2-18': 2.1875rem, // 35px
-    'sb-3-00': 3rem, /// 48px
-    'sb-3-31': 3.125rem, // 50px
-    'sb-5-00': 5rem, // 80px;
+    'sb-1-87': 1.875em,     /// 30px
+    'sb-2-18': 2.1875rem,   /// 35px
+    'sb-2-37': 2.375rem,    /// 38px
+    'sb-2-50': 2.5em,       /// 40px
+    'sb-3-00': 3rem,        /// 48px
+    'sb-3-31': 3.125rem,    // 50px
+    'sb-5-00': 5rem,        // 80px;
 );
 
 
