--- a/src/scss/pages/_main-page.scss
+++ b/src/scss/pages/_main-page.scss
@@ -51,7 +51,7 @@ $_container-name: header;
   background: radial-gradient(125% 125% at 50% 110%,
       rgba(99, 102, 241, 0.1) 0%,
       rgba(218, 70, 239, 0.05) 42%,
-      rgba(241, 244, 253, 0.07) 83%);      
+      rgba(241, 244, 253, 0.07) 83%);
 }
 
 /// Setting Content Width and activating some basic responsive settings
@@ -76,6 +76,11 @@ $_container-name: header;
     transition: all 200ms;
     padding-left: map-get($map: a.$spacing-distance-relative, $key: 's-2-50');
     padding-right: map-get($map: a.$spacing-distance-relative, $key: 's-2-50');
+  }
+  /// Mobile Phones :)
+  @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+    padding-left: map-get($map: a.$spacing-distance-relative, $key: 's-0-62');
+    padding-right: map-get($map: a.$spacing-distance-relative, $key: 's-0-62');
   }
 }
 
@@ -113,9 +118,6 @@ $_container-name: header;
       list-style-type: none;
       color: map-get($map: a.$links-color, $key: 'link-nav');
       font-size: map-get($map: a.$font-sizes, $key: 't-m');
-
-
-
     }
 
     &__navigation__li-items {
@@ -227,15 +229,14 @@ $_container-name: header;
 /// Hero section CSS code
 .hero-section {
 
-  
+
   /// Local vars ohyeaa :D x2
   $max-colums: 2;
   $max-rows: 4;
   $hero-max-width: 31.875rem;
 
   /// Creating Grid
-  @include a.grid-row-colum(map-get(
-    $map: a.$display-type, $key: 'grid'),
+  @include a.grid-row-colum(map-get($map: a.$display-type, $key: 'grid'),
     a.create-list(auto, auto),
     a.create-list(auto, 2fr, auto),
     $max-rows);
@@ -243,12 +244,20 @@ $_container-name: header;
   & {
     /// Added top padding desktop, the padding starts from the image
     padding-top: map-get($map: a.$spacing-distance-relative, $key: 's-9-37');
+
     @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'xlarge-1')) {
       padding-top: map-get($map: a.$spacing-distance-base, $key: 'sb-5-00');
     }
-  
+
+    /// Mobile Phones :)
+    @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+      padding-top: map-get($map: a.$spacing-distance-base, $key: 'sb-2-50');
+      padding-top: map-get($map: a.$spacing-distance-base, $key: 'sb-2-37');      
+    }
+
+
   }
-  
+
   /// Main heading for hero-section
   &__heading {
     @include a.grid-position(1, 1, 1, 1);
@@ -262,14 +271,24 @@ $_container-name: header;
       /// We are hardcoding this one to rem and not to parent container
       padding-top: map-get($map: a.$spacing-distance-base, $key: 'sb-3-31');
       padding-bottom: map-get($map: a.$spacing-distance-base, $key: 'sb-1-50');
-    
+
+      /// Tablet mode :)
       @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'xlarge-1')) {
         @include a.grid-position(1, 3, 1, 1);
         padding-top: 0;
         padding-bottom: map-get($map: a.$spacing-distance-base, $key: 'sb-2-18');
         text-align: center;
+        font-size: map-get($map: a.$display-heading, $key: 'd-7');
+        max-width: 75%;
+        margin: 0 auto;
       }
 
+      /// Mobile Phones :)
+      @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+        font-size: map-get($map: a.$display-heading, $key: 'd-8');
+        max-width: 100%;
+        margin: 0 auto;
+      }
     }
   }
 
@@ -288,6 +307,15 @@ $_container-name: header;
       padding-top: map-get($map: a.$spacing-distance-relative, $key: 's-5-62');
       padding-bottom: map-get($map: a.$spacing-distance-relative, $key: 's-2-50');
     }
+
+    /// Mobile Phones :)
+    @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+      @include a.grid-position(1, 3, 2, 2);
+      padding-top: 0;
+      padding-bottom: map-get($map: a.$spacing-distance-relative, $key: 's-2-50');
+      text-align: center;
+      max-width: 100%;
+    }
   }
 
   /// Apps links for the hero-section
@@ -296,9 +324,16 @@ $_container-name: header;
     display: map-get($map: a.$display-type, $key: 'flex');
     gap: map-get($map: a.$spacing-distance-relative, $key: 's-1-50');
 
+    /// Tablets & Smaller laptops
     @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'xlarge-1')) {
       justify-content: center;
       gap: map-get($map: a.$spacing-distance-relative, $key: 's-1-1');
+    }
+    /// Mobile Phones :)
+    @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+      @include a.grid-position(1, 3, 3, 3);
+      flex-direction: column;
+      align-items: center;
     }
 
   }
@@ -307,13 +342,11 @@ $_container-name: header;
   &__discover-more {
     @include a.grid-position(1, 1, 4, 4);
     display: map-get($map: a.$display-type, $key: 'flex');
-    align-items: center;
-
+    
     /// Paddings and positions
     padding-top: 13.4375em;
     padding-bottom: 3.75em;
     position: relative;
-
 
     /// Color and font
     font-size: map-get($map: a.$font-sizes, $key: 't-s');
@@ -326,11 +359,27 @@ $_container-name: header;
       padding-bottom: map-get($map: a.$spacing-distance-relative, $key: 's-3-00');
     }
 
+    /// Mobile Devices
+    @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+      @include a.grid-position(1, 3, 4, 4);
+      padding-bottom: map-get($map: a.$spacing-distance-base, $key: 'sb-1-87');     
+      justify-content: center;
+    }
+
+
     &__link-item {
 
       /// Base Color ANimation :D
       & {
-        @include a.link-nav-animation(map-get($map: a.$links-color, $key: 'link-nav'), 1.2, 400ms, null, false);
+        @include a.link-nav-animation(a.$font-color-primary, 1.2, 400ms, null, false);
+        /// Text element
+        & span{
+          margin: map-get($map: a.$spacing-distance-relative, $key: 's-1-1');
+          /// Mobile Devices
+          @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+            margin: map-get($map: a.$spacing-distance-relative, $key: 's-1-2');
+          }
+        }
       }
 
       /// Setting up Icon :)
@@ -366,43 +415,55 @@ $_container-name: header;
     max-width: $_grid-max-width;
     width: $_grid-max-width;
 
-    
+
+    /// Preparing for Pad/Tablets
     @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'xlarge-3')) {
       /// This was added to avoid the images be hidden in to right side, now we see them all the time
       /// even in smaller container size
       margin-right: -1em;
     }
+
+    /// Tablets & Smaller laptops
     @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'xlarge-1')) {
       @include a.grid-position(2, 2, 2, 5);
       max-width: 25.9375em;
       margin-right: -1em;
       margin-right: 0 auto;
     }
-   
-    &__image-wrapper{
+
+    /// Mobiles
+    @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'medium')) {
+      display: none;
+    }
+
+    &__image-wrapper {
       background-color: blueviolet;
       width: 100%;
     }
 
     /// Common CSS for the images
-    &__image-wrapper__iphone-1,  &__image-wrapper__iphone-2{
+    &__image-wrapper__iphone-1,
+    &__image-wrapper__iphone-2 {
       position: absolute;
     }
 
-    &__image-wrapper__iphone-1{
+    &__image-wrapper__iphone-1 {
       right: 4.375em;
       z-index: 250;
       width: 24.375em;
+
       @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'xlarge-1')) {
         width: 15.23375em;
         right: 0;
       }
     }
-    &__image-wrapper__iphone-2{
+
+    &__image-wrapper__iphone-2 {
       right: 18em;
       top: 8.5em;
       z-index: 125;
       width: 23.5em;
+
       @include a.container-query($_container-name, 0, map-get($map: a.$breakpoints, $key: 'xlarge-1')) {
         width: 15.23375em;
         right: 8.8em;
